antsurance/force-app/main/default/objects/Policy__c/Policy__c.object-meta.xml
<CustomObject>
    <description>An insurance policy Antsurance has quoted or issued to a policyholder account. It records the line of business, term dates, premium, limit and deductible, plus billing and renewal status. Claims and service requests are cases that point at a policy. Expiration must fall after the effective date.</description>
    <label>Policy</label>
    <nameField>
        <label>Policy Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>