antsurance/force-app/main/default/objects/Policy__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <description>The agency or producer that placed the policy. Blank for direct business.</description>
    <label>Agency</label>
    <length>80</length>
    <type>Text</type>
</CustomField>