antsurance/force-app/main/default/objects/Policy__c/fields/Annual_Premium__c.field-meta.xml
<CustomField>
    <fullName>Annual_Premium__c</fullName>
    <description>Premium for a full policy year.</description>
    <label>Annual Premium</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>