antsurance/force-app/main/default/objects/Policy__c/fields/Coverage_Limit__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Limit__c</fullName>
    <description>The most the policy pays for a covered loss.</description>
    <label>Coverage Limit</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>