antsurance/force-app/main/default/objects/Policy__c/fields/Days_to_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Renewal__c</fullName>
    <description>Days until the current term expires. Negative once it has passed.</description>
    <label>Days Left</label>
    <formula><![CDATA[Expiration_Date__c - TODAY()]]></formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>