antsurance/force-app/main/default/objects/Policy__c/fields/Deductible__c.field-meta.xml
<CustomField>
    <fullName>Deductible__c</fullName>
    <description>What the policyholder pays on a claim before coverage applies.</description>
    <label>Deductible</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>