antsurance/force-app/main/default/objects/Policy__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>First day of coverage for the current term.</description>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>