antsurance/force-app/main/default/objects/Policy__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>Last day of coverage for the current term. Renewal is due by this date.</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>