antsurance/force-app/main/default/objects/Policy__c/fields/Incurred_Losses__c.field-meta.xml
<CustomField>
    <fullName>Incurred_Losses__c</fullName>
    <description>Reserves or payments on this policy's claims, whichever is higher for each claim. Kept up to date by AntsuranceCaseAutomation whenever a claim changes.</description>
    <label>Incurred Losses</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>