antsurance/force-app/main/default/objects/Policy__c/fields/Insured_Item__c.field-meta.xml
<CustomField>
    <fullName>Insured_Item__c</fullName>
    <description>What is covered: the vehicle, property address or business operation.</description>
    <label>Insured Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>