antsurance/force-app/main/default/objects/Policy__c/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <description>The kind of coverage this policy provides.</description>
    <label>Line of Business</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Line_of_Business</valueSetName>
    </valueSet>
    <type>Picklist</type>
</CustomField>