antsurance/force-app/main/default/objects/Policy__c/fields/Loss_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Loss_Ratio__c</fullName>
    <description>Incurred losses as a share of a year of premium. Over 100% means the policy has cost more in claims than it brings in.</description>
    <label>Loss Ratio</label>
    <formula><![CDATA[IF(BLANKVALUE(Annual_Premium__c, 0) = 0, NULL, BLANKVALUE(Incurred_Losses__c, 0) / Annual_Premium__c)]]></formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>