antsurance/force-app/main/default/objects/Policy__c/fields/Policy_Summary__c.field-meta.xml
<CustomField>
    <fullName>Policy_Summary__c</fullName>
    <description>Policy number, line and insured item on one line, for pickers in flows.</description>
    <label>Policy Summary</label>
    <formula><![CDATA[Name & " " & TEXT(Line_of_Business__c) & IF(ISBLANK(Insured_Item__c), "", " (" & LEFT(Insured_Item__c, 60) & ")")]]></formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>