antsurance/force-app/main/default/objects/Policy__c/fields/Policyholder_Name__c.field-meta.xml
<CustomField>
    <fullName>Policyholder_Name__c</fullName>
    <description>The policyholder's name as text, so searching for a customer's name also finds their policies. Set when the policy is saved; do not edit.</description>
    <label>Policyholder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>