antsurance/force-app/main/default/objects/Policy__c/fields/Primary_Insured__c.field-meta.xml
<CustomField>
    <fullName>Primary_Insured__c</fullName>
    <description>The person to deal with on this policy: the named insured on a personal policy, or the contact at the business on a commercial one, where the named insured is the business itself.</description>
    <label>Policy Contact</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Policies</relationshipLabel>
    <relationshipName>Policies</relationshipName>
    <type>Lookup</type>
</CustomField>