antsurance/force-app/main/default/objects/Policy__c/fields/Producer__c.field-meta.xml
<CustomField>
    <fullName>Producer__c</fullName>
    <description>The agency that sold and services this policy. Blank when Antsurance sold it directly.</description>
    <label>Producer</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Policies Produced</relationshipLabel>
    <relationshipName>Policies_Produced</relationshipName>
    <type>Lookup</type>
</CustomField>