antsurance/force-app/main/default/objects/Policy__c/fields/Sold_Through__c.field-meta.xml
<CustomField>
    <fullName>Sold_Through__c</fullName>
    <description>The agency that produced the policy, or Direct when Antsurance sold it itself. For grouping reports without a blank bucket.</description>
    <label>Sold Through</label>
    <formula>IF(ISBLANK(Producer__c), 'Direct', Producer__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>