antsurance/force-app/main/default/objects/Policy__c/fields/Underwriting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Notes__c</fullName>
    <description>The underwriter view of the risk: what was considered, conditions and things to watch at renewal. Markdown is rendered on the record page.</description>
    <label>Underwriting Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>