antsurance/force-app/main/default/objects/Policy__c/validationRules/Expiration_After_Effective.validationRule-meta.xml
<ValidationRule>
    <fullName>Expiration_After_Effective</fullName>
    <active>true</active>
    <description>A policy term cannot end on or before the day it starts.</description>
    <errorConditionFormula><![CDATA[AND(NOT(ISBLANK(Effective_Date__c)), NOT(ISBLANK(Expiration_Date__c)), Expiration_Date__c <= Effective_Date__c)]]></errorConditionFormula>
    <errorDisplayField>Expiration_Date__c</errorDisplayField>
    <errorMessage>The expiration date must be after the effective date.</errorMessage>
</ValidationRule>