antsurance/force-app/main/default/objects/Policy__c/listViews/Active_Policies.listView-meta.xml
<ListView>
    <fullName>Active_Policies</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Line_of_Business__c</columns>
    <columns>Status__c</columns>
    <columns>Annual_Premium__c</columns>
    <columns>Expiration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active</label>
</ListView>