antsurance/force-app/main/default/objects/Policy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Line_of_Business__c</columns>
    <columns>Status__c</columns>
    <columns>Annual_Premium__c</columns>
    <columns>Expiration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Policies</label>
</ListView>