antsurance/force-app/main/default/objects/Policy__c/listViews/Commercial_Lines.listView-meta.xml
<ListView>
    <fullName>Commercial_Lines</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Line_of_Business__c</columns>
    <columns>Status__c</columns>
    <columns>Annual_Premium__c</columns>
    <columns>Expiration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Line_of_Business__c</field>
        <operation>equals</operation>
        <value>Commercial Property,General Liability,Workers Compensation,Commercial Auto</value>
    </filters>
    <label>Commercial Lines</label>
</ListView>