antsurance/force-app/main/default/objects/Policy__c/listViews/Line_Personal_Auto.listView-meta.xml
<ListView>
    <fullName>Line_Personal_Auto</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Insured_Item__c</columns>
    <columns>Status__c</columns>
    <columns>Annual_Premium__c</columns>
    <columns>Expiration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Line_of_Business__c</field>
        <operation>equals</operation>
        <value>Personal Auto</value>
    </filters>
    <label>Personal Auto</label>
</ListView>