antsurance/force-app/main/default/objects/Policy__c/listViews/Past_Due.listView-meta.xml
<ListView>
    <fullName>Past_Due</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Line_of_Business__c</columns>
    <columns>Annual_Premium__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Expiration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Payment_Status__c</field>
        <operation>equals</operation>
        <value>Past Due</value>
    </filters>
    <label>Past Due</label>
</ListView>