antsurance/force-app/main/default/objects/Policy__c/listViews/Personal_Lines.listView-meta.xml
<ListView>
    <fullName>Personal_Lines</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Line_of_Business__c</columns>
    <columns>Status__c</columns>
    <columns>Annual_Premium__c</columns>
    <columns>Expiration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Line_of_Business__c</field>
        <operation>equals</operation>
        <value>Personal Auto,Homeowners,Renters,Umbrella</value>
    </filters>
    <label>Personal Lines</label>
</ListView>