antsurance/force-app/main/default/objects/Policy__c/listViews/Renewals_Next_60_Days.listView-meta.xml
<ListView>
    <fullName>Renewals_Next_60_Days</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Line_of_Business__c</columns>
    <columns>Annual_Premium__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Days_to_Renewal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active,Pending Renewal</value>
    </filters>
    <filters>
        <field>Expiration_Date__c</field>
        <operation>equals</operation>
        <value>NEXT_N_DAYS:60</value>
    </filters>
    <label>Renewals, Next 60 Days</label>
</ListView>